--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </div>
       <div id="notes"></div>
       <div id="placeholder">
-        <img id="placeholder-logo" src="https://icon.now.sh/lightbulb_outline">
+        <img id="placeholder-logo" src="./images//google_keep.png">
         <p id="placeholder-text">Notes you add appear here</p>
       </div>
     </main>
