--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
   </head>
   <body>
     <div class="modal">
-       <div class="modal-content">
-          <input class="modal-title" placeholder="Title" type="text">   
-          <input class="modal-text" placeholder="Take a note..." type="text">   
-          <span class="modal-close-button">Close</span>
-        </div>    
-    </div>  
+      <div class="modal-content">
+        <input class="modal-title" placeholder="Title" type="text">
+        <input class="modal-text" placeholder="Take a note..." type="text">
+        <span class="modal-close-button">Close</span>
+      </div>
+    </div>
     <main>
       <header>
         <img class="header-logo" src="https://www.gstatic.com/images/branding/product/1x/keep_48dp.png">
@@ -30,6 +30,12 @@
       <div id="placeholder">
         <img id="placeholder-logo" src="./images//google_keep.png">
         <p id="placeholder-text">Notes you add appear here</p>
+      </div>
+      <div id="color-tooltip">
+        <div class="color-option" data-color="#fff" id="white"></div>
+        <div class="color-option" data-color="#d7aefb" id="purple"></div>
+        <div class="color-option" data-color="#fbbc04" id="orange"></div>
+        <div class="color-option" data-color="#a7ffeb" id="teal"></div>
       </div>
     </main>
     <script src="app.js"></script>
